modal info film udah jadi

--- a/index.html
+++ b/index.html
@@ -14,8 +14,29 @@
         </div>
       </div>
 
+      <!-- Movie Cards -->
       <div class="row movies-container"></div>
 
+    </div>
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="movieDetailModal" tabindex="-1" aria-labelledby="movieDetailModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="movieDetailModalLabel">Movie Info</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <div class="row modal-movie">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
 
