--- a/index.html
+++ b/index.html
@@ -26,15 +26,10 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="movieDetailModalLabel">Movie Info</h1>
+            <h1 class="modal-title fs-5" id="movieDetailModalLabel">Modal title</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-              <div class="row modal-movie">
-              </div>
-            </div>
-          </div>
+          <div class="modal-body modal-movie"></div>
         </div>
       </div>
     </div>
