--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-8">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control input-keyword" placeholder="Movie name" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-primary search-button" type="button" id="button-addon2">Search</button>
+          </div>
+        </div>
+      </div>
+
       <!-- Movie Cards -->
       <div class="row movies-container"></div>
 
@@ -39,6 +48,6 @@
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="pakeJqueryAjax.js"></script>
   </body>
 </html>
